# tack-n-strat-c-core

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: tack_strat_bench.cpp
build_sdl_fetch_test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
helper-code/tack-and-strat-java/: .gitignore  CHANGELOG.md  pom.xml  run.sh
helper-code/tack-and-strat-java/assets/: ASSET_SHORTLIST.md  README.md
helper-code/tack-and-strat-java/assets/graphics/: city.txt  farm.txt  graphics_assignments.json  scout.txt  settler.txt
helper-code/tack-and-strat-java/assets/graphics/catalog/: slots.json
helper-code/tack-and-strat-java/assets/graphics/schema/: generation_bundle.v1.example.json  generation_bundle.v1.schema.json  set_manifest.v1.example.json
helper-code/tack-and-strat-java/assets/graphics/sets/: README.txt
helper-code/tack-and-strat-java/assets/music/: theme.notes  theme_evening.notes  theme_frontier.notes
helper-code/tack-and-strat-java/music-api/: .env.example  bootstrap.php
helper-code/tack-and-strat-java/music-api/public/: download.php  manifest.php  upload.php
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/: TackStratApp.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/ai/: SeatAi.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/audio/: SfxPlayer.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/graphics/: GraphicAssignments.java  GraphicResolvedAsset.java  GraphicRuntime.java  GraphicSlotIds.java  GraphicSlotUploads.java  GraphicSlotWorkspaceStore.java  GraphicSlotsCatalog.java  RepoGraphicPaths.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/model/: Chronology.java  City.java  CityBuilding.java  CityFocus.java  CityNamePool.java  GameMap.java  GameSession.java  GameSnapshot.java  GeneratedWorld.java  HexCoord.java  Player.java  RegionalWeather.java  Season.java  Terrain.java  TileImprovement.java  Unit.java  UnitKind.java  Weather.java  WeatherSystem.java  WildAnimal.java  WildAnimalKind.java  WorldGenerator.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/perf/: EdtProfiler.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/persistence/: GamePersistence.java  GameSaveFiles.java  LoadedGame.java  SaveEntrySummary.java  SaveFileEnvelope.java  SaveMetadata.java  SeatCameraSnap.java  UiSaveState.java
helper-code/tack-and-strat-java/src/main/java/com/tackstrat/ui/: BackgroundMusicPlayer.java  GameOptions.java  HandoffPanel.java  HexMapPanel.java  Keybinds.java  LoadGamePanel.java  MainWindow.java  MenuPanel.java  MusicSyncClient.java  PlayPanel.java  SaveGamePanel.java  SettingsPanel.java  SetupPanel.java  SplashPanel.java  UiSoundEffects.java  UiTheme.java  VictoryPanel.java  WindowLaunchMode.java
helper-code/tack-and-strat-java/src/test/java/com/tackstrat/: AutosavePersistenceTest.java  SaveLoadRoundTripTest.java  SmokeTest.java
helper-code/tack-and-strat-java/src/test/java/com/tackstrat/ai/: SeatAiTest.java
helper-code/tack-and-strat-java/src/test/java/com/tackstrat/graphics/: GraphicRuntimeIntegrationTest.java  GraphicSlotUploadsTest.java
helper-code/tack-and-strat-java/src/test/java/com/tackstrat/model/: CityNamePoolTest.java  GameSessionAutoExploreTest.java  GameSessionPreviewYieldTest.java  GameSessionTest.java
helper-code/tack-and-strat-java/src/test/java/com/tackstrat/ui/: HexMapPanelSettleHintsTest.java
include/tack/strat/: chronology.hpp  city.hpp  city_building.hpp  city_focus.hpp  city_name_pool.hpp  combat_rng.hpp  command_script.hpp  engine_contract.hpp  game_map.hpp  game_session.hpp  game_snapshot.hpp  generated_world.hpp  hex.hpp  java_random.hpp  map_size.hpp  mix64.hpp  player.hpp  regional_weather.hpp  season.hpp  seat_ai.hpp  snapshot_digest.hpp  snapshot_json_io.hpp  snapshot_validate.hpp  terrain.hpp  text_play.hpp  tile_improvement.hpp  unit.hpp  unit_kind.hpp  weather.hpp  weather_system.hpp  wild_animal.hpp  world_generator.hpp
include/tack/strat/net/: turn_sync.hpp
src/: main.cpp
src/engine/: city.cpp  city_name_pool.cpp  combat_rng.cpp  game_map.cpp  game_session.cpp  game_session_rules.cpp  game_session_snapshot.cpp  hex.cpp  java_random.cpp  map_size.cpp  regional_weather.cpp  seat_ai.cpp  snapshot_digest.cpp  snapshot_json_io.cpp  snapshot_validate.cpp  text_play.cpp  unit.cpp  wild_animal.cpp  world_generator.cpp
src/engine/net/: turn_sync.cpp
src/gui/: sdl_civ1_main.cpp
tests/: test_game.cpp  test_game_long_run.cpp  test_game_session.cpp  test_java_random.cpp  test_preparation.cpp  test_rules_scenarios.cpp  test_seat_ai.cpp  test_text_play.cpp
